test optimizations